# ecmwf-downloader

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  pyproject.toml  topopyscale_flex_design.md
docs/: backend-priority.md  openmeteo-backend.md  openmeteo-comparison.md
scripts/: benchmark_fair_comparison.py  benchmark_hybrid.py  benchmark_time_scaling_fair.py
src/ecmwf_downloader/: __init__.py  base.py  bbox.py  cli.py  derived.py  ifs_forecast.py  loader.py  validation.py  variables.py  writer.py
src/ecmwf_downloader/backends/: __init__.py  google.py  openmeteo.py
src/ecmwf_downloader/forecast/: __init__.py  base.py  loader.py
src/ecmwf_downloader/forecast/backends/: __init__.py  ecmwf_opendata.py  openmeteo.py
src/ecmwf_downloader/reanalysis/: __init__.py  loader.py
test_output_10x/cds/daily/: dPLEV_20200101.nc  dPLEV_20200102.nc  dPLEV_20200103.nc  dSURF_20200101.nc  dSURF_20200102.nc  dSURF_20200103.nc
test_output_10x/google/daily/: dPLEV_20200101.nc  dPLEV_20200102.nc  dPLEV_20200103.nc  dSURF_20200101.nc  dSURF_20200102.nc  dSURF_20200103.nc
test_output_10x/s3zarr/daily/: dPLEV_20200101.nc  dPLEV_20200102.nc  dPLEV_20200103.nc  dSURF_20200101.nc  dSURF_20200102.nc  dSURF_20200103.nc
tests/: test_backends_comparison.py
tests/test_forecast/: __init__.py  conftest.py  test_base.py  test_ecmwf_opendata.py  test_loader.py  test_openmeteo.py
tests/test_reanalysis/: __init__.py  conftest.py  test_backends.py  test_base.py  test_bbox.py  test_google.py  test_hybrid.py  test_loader.py  test_openmeteo_s3.py
(+7 files in other folders)
